[package]
name = "dominari-gfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[dependencies]
bevy = "0.8.1"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
wasm-bindgen = "0.2"
bevy_prototype_lyon = "0.6.0"
dominarisystems = { git = "https://github.com/spacemandev-git/dominari-ecs.git" }
console_error_panic_hook = { version = "0.1.7", optional = true }
bytemuck = "1.12.3"
anchor-lang = "0.25.0"
bevy_ecs_tilemap = { version = "0.8.0", features = ["atlas", "render"] }
tiled = { version = "0.9", default-features = false }
anyhow = { version = "1.0" }
ldtk_rust = { version = "0.6" }
env_logger = "0.9"
serde_json = { version = "1.0" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
